# OpenAstroFocuser

./: README.md  west.yml
.github/actions/setup-zephyr/: action.yml
.github/workflows/: build.yml  docs.yml
app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml  sysbuild.conf
app/boards/: esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay  qemu_cortex_m0.conf  qemu_cortex_m0.overlay
app/snippets/mcuboot/: snippet.yml  sysbuild-mcuboot.conf
app/src/: Configuration.hpp  EepromPositionStore.cpp  EepromPositionStore.hpp  FirmwareHandler.cpp  FirmwareHandler.hpp  Focuser.cpp  Focuser.hpp  FocuserStepper.hpp  FocuserThread.cpp  FocuserThread.hpp  PositionStore.hpp  Thread.cpp  Thread.hpp  UartHandler.cpp  UartHandler.hpp  UartThread.cpp  UartThread.hpp  ZephyrStepper.cpp  ZephyrStepper.hpp  main.cpp
doc/: Doxyfile  conf.py  index.rst
doc/_doxygen/: main.md
drivers/: CMakeLists.txt
lib/: CMakeLists.txt  Kconfig
lib/moonlite/: CMakeLists.txt  Kconfig  Moonlite.cpp  Moonlite.h  README.md
lib/moonlite/include/: Moonlite.hpp
scripts/: example_west_command.py
tests/app/focuser/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/app/focuser/boards/: qemu_cortex_m0.conf  qemu_cortex_m0.overlay
tests/app/focuser/src/: main.cpp
tests/lib/moonlite/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/moonlite/src/: main.cpp
zephyr/: module.yml
